<resources>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="app_name">Kleos education</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_universities">Universities</string>
    <string name="menu_slideshow">Programs</string>
    <string name="label_full_name">Full name</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_patronymic">Patronymic (optional)</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_login">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="switch_to_register">Do not have an account? Register</string>
    <string name="switch_to_login">Already have an account? Sign in</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_partners">Partners</string>
    <string name="menu_chat">Support</string>
    <string name="menu_admission">Admission</string>
    <string name="action_logout">Logout</string>
    <string name="api_base_url">http://10.0.2.2:8080/</string>
    <string name="choose_language">Choose language</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="invite_now">Invite Now</string>
    <string name="invite_message">Help your friends now organize their university life by sharing the app</string>
    <string name="invite_share_title">Share app</string>
    <string name="invite_share_text">Try the StudyInRussia app! It helped me a lot. Download and check it out.</string>
    <string name="close">Close</string>
    <string name="lang_russian">Русский</string>
    <string name="lang_english">English</string>
    <string name="lang_chinese">中文（简体）</string>
    <string name="no_suitable_question">No suitable question? Submit a request</string>
    <string name="support_title">Questions and Help</string>
    <string name="support_subtitle">Didn\'t find the answer you need?</string>
    <string name="leave_request">Leave a request</string>
    <string name="faq_hint">Brief hint, if needed</string>
    <string name="hint_message">Text</string>
    <string name="action_send">Send</string>
    <string name="what_interests_you">What interests you?</string>
    <string name="loading">Loading…</string>
    <string name="no_partners_yet">No partners yet</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="guest">guest</string>
    <string name="hello_name">Hello %1$s</string>
    <string name="hi_name">Hi, %1$s</string>
    <string name="id_prefix">ID: %1$s</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_subtitle">Log in or create a profile</string>
    <string name="forgot_password_not_impl">Password reset is not implemented yet</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_sign_in">Sign In</string>
    <string name="remember_password">Remember password</string>
    <string name="no_account_register">Still no account? Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="label_login">Login</string>
    <string name="have_account_login">Already have an account? Sign in</string>
    <string name="admission_apply_now">Apply Now</string>
    <string name="label_surname">Surname</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="label_place_of_birth">Place of birth</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_sex">Sex</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="label_phone">Phone</string>
    <string name="label_passport_number">Passport number</string>
    <string name="label_passport_issue">Date and place of passport issue</string>
    <string name="label_passport_expiry">Passport expiry date</string>
    <string name="label_visa_city">City of Russian visa obtaining in your country</string>
    <string name="label_program">Program</string>
    <string name="label_comment_optional">Comment (optional)</string>
    <string name="action_submit_application">Submit application</string>
    <string name="consent_label">I agree to the processing of personal data</string>
    <string name="consent_read_full">Read full text</string>
    <string name="ob_title_1">Discover and explore famed Russian universities</string>
    <string name="ob_sub_1">Through our mobile application, you will be able to discover first‑rate &amp; notable Russian universities and all their programs</string>
    <string name="ob_title_2">StudyInRussia Awesome\nTalk Show and Broadcast</string>
    <string name="ob_sub_2">The distinctive feature of our mobile application which enables you to watch live talk show &amp; broadcast with leading Russian universities to discuss and obtain the latest</string>
    <string name="ob_title_3">Forum, the excellent venue for study discussion and social interaction</string>
    <string name="ob_sub_3">Forum, the outstanding and designated space created with the intention for you to join, share and post the brilliant ideas in your mind to interact with each other</string>
    <string name="profile_name">Name</string>
    <string name="profile_notes">Notes</string>
    <string name="profile_payment">Payment</string>
    <string name="profile_penalties">Penalties</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_course">Course</string>
    <string name="profile_speciality">Speciality</string>
    <string name="profile_status">Status</string>
    <string name="profile_university">University</string>
    <string name="profile_student_id">Student ID</string>
    <string name="role_student">Student</string>
    <string name="role_admin">Administrator</string>
    <string name="role_user">User</string>
    <string name="filters_title">Filters</string>
    <string name="filter_search_program">Search programs</string>
    <string name="filter_language">Language</string>
    <string name="filter_education_level">Level of education</string>
    <string name="filter_university">University</string>
    <string name="find_variants">Find variants</string>
    <string name="tab_all">All</string>
    <string name="tab_news">News</string>
    <string name="tab_interesting">Interesting</string>
    <string name="button_find">Find</string>
    <string name="button_open_website">Open website</string>
    <string name="button_skip">Skip</string>
    <string name="button_back">Back</string>
    <string name="button_submit">Submit</string>
    <string name="button_apply">Apply</string>
    <string name="button_send_again">Send again</string>
    <string name="button_open_email">Open email client</string>
    <string name="button_login_as_guest">Or login as guest</string>
    <string name="admission_personal_data">Personal data</string>
    <string name="admission_fill_time">Filling will take ~5 minutes</string>
    <string name="admission_found_programs">Found: %1$d programs</string>
    <string name="profile_login_required">Login required</string>
    <string name="partner_description">Partner description</string>
    <string name="verify_email_title">Verify email</string>
    <string name="verify_email_message">We sent an email with a verification link. Open the link from the email on this device to complete registration.</string>
    <string name="verify_email_address">Address:</string>
    <string name="onboarding_study">Study</string>
    <string name="onboarding_programs_and">programs and</string>
    <string name="onboarding_submit_applications">submit applications</string>
    <string name="home_welcome_back">Welcome back,</string>
    <string name="home_explore_new">Let\'s explore\nnew areas</string>
    <string name="program_title">Program</string>
    <string name="program_university_name">University name</string>
    <string name="gallery_category">Gallery</string>
    <string name="gallery_graduates">Graduates</string>
    <string name="news_category">News</string>
    <string name="news_title_placeholder">Title</string>
    <string name="news_date_placeholder">Date</string>
    <string name="news_content_placeholder">Content</string>
    <string name="university_category">Universities</string>
    <string name="university_name_placeholder">University Name</string>
    <string name="university_location_placeholder">Location</string>
    <string name="university_description_placeholder">Description</string>
    <string name="university_website_placeholder">Website</string>
    <string name="content_title_placeholder">Title</string>
    <string name="content_date_placeholder">01.01.2000</string>
    <string name="program_result_name_placeholder">Name</string>
    <string name="program_result_description_placeholder">Description</string>
    <string name="gallery_detail_title_placeholder">Title</string>
    <string name="gallery_detail_description_placeholder">Description</string>
    <string name="gallery_detail_media_url_placeholder">Media URL</string>
    <string name="category_news">News</string>
    <string name="category_interesting">Interesting</string>
    <string name="category_gallery">Gallery</string>
    <string name="category_universities">Universities</string>
    <string name="category_partners">Partners</string>
    <string name="partner_title">Partner</string>
    <string-array name="faq_questions">
        <item>When does application for fall intake open?</item>
        <item>Is there a spring intake?</item>
        <item>What documents are required to apply?</item>
        <item>Is legalization or apostille required?</item>
        <item>Is diploma recognition (nostrification) needed?</item>
        <item>What Russian level is required?</item>
        <item>Are there preparatory Russian courses?</item>
        <item>Are there entrance exams or interviews?</item>
        <item>How long does the visa invitation take?</item>
        <item>What visa type is issued first?</item>
        <item>How to pay tuition?</item>
        <item>Is a prepayment required?</item>
        <item>Refund if visa refused?</item>
        <item>Is dormitory provided?</item>
        <item>Dormitory cost?</item>
        <item>Is medical insurance required?</item>
        <item>Medical exam and fingerprints?</item>
        <item>Do I need migration registration?</item>
        <item>What is a migration card?</item>
        <item>Can I open a bank account?</item>
        <item>How to get a SIM card?</item>
        <item>Can I work while studying?</item>
        <item>Can I transfer from another university?</item>
        <item>Are scholarships available?</item>
        <item>Monthly living costs?</item>
        <item>Age limits?</item>
        <item>Is distance learning available?</item>
        <item>Multiple-entry visa immediately?</item>
        <item>Who translates documents into Russian?</item>
        <item>Can I pay in parts?</item>
    </string-array>
</resources>