<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/nav_admission"
        android:icon="@drawable/ic_nav_admission"
        android:title="@string/menu_admission" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="Universities" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_nav"
        android:title="@string/menu_profile" />
</menu>


