<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.Kleos">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/nav_header_vertical_spacing">

        <ImageView
            android:id="@+id/headerLogo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/logo_kleos_fon" />

        <ImageView
            android:id="@+id/headerWordmark"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/kleos_fon" />
    </LinearLayout>

    <TextView
        android:id="@+id/headerGreetingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/hello_name"
        android:textAppearance="@style/TextAppearance.Kleos.Body1"
        android:textColor="@color/dark_on_surface" />

    <TextView
        android:id="@+id/headerEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textAppearance="@style/TextAppearance.Kleos.Body1"
        android:textColor="@color/dark_on_surface_variant" />
</LinearLayout>